07-04-17 : Weapons' magical status is no longer ignored in damage immunity
           calculations.

07-04-17 : The world command now reports the correct number of distinct
           mobiles never killed.

06-13-17 : Djalla's protection and Legba's guidance are now more powerful
           when cast on self.

03-27-16 : Shaman chrism items now working without crashing the mud. Kudos
           to Jeren for helping identify the problem and providng a solution.

	   - Changes to Load Rate. Fixed Rate was increased and SuitSet also
	     saw a rise in their load rates. Please report any excessive
	     load rates.
	   - PoC have been reduced in frequency.
	   - As we now have the Sneezymud domain, the MUD is no longer
             identified as Grimhavenmud.

07-23-15 : Ratmen as a race are now properly ratman-sized instead of
           accidentally defaulting to the human racial template.

07-22-15 : The ping toggle is gone, since the system no longer pings anyone.

07-20-15 : The mayor of Grimhaven has adjusted the rent tax schedule to be
           more progressive. Also, the 'offer' and 'rent credit' commands
           are gone.

07-02-15 : Times now display properly as 'X:00' instead of 'X: 0'.

06-30-15 : Fixed a bug where renting with a persistent follower (pet)
           with a custom name would crash the mud.

06-30-14  : Below are some of the changes that have been recently made.

           - Portal usage for alts within the account has been fixed.
           - Chaos Plains Re-Enabled (other zones pending)
	   - Wiki updated with updated content

           <Y>Load rates<z>
           - Rare Potions Drop Rates Enabled (<P>PoC<z>,<R>PoL<z>,<W>PoY<z>,<G>Mystery<z>)
           - Complete Armor Sets drop rates reduced
           - Single Item Drops (Clothing,Armor,Weapons) Increased

	   Load Rates were subjected to two weeks of testing. Please be
           patient as we continue to review the code change.
